objects/sumoapp__Email__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of attempts to send failed emails</inlineHelpText>
        <label>Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Relation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EmailAddress__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sumoapp__HashCode__c</fullName>
        <label>Hash Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sumoapp__HtmlBody__c</fullName>
        <label>HTML Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Relation</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecipientId__c</fullName>
        <label>Recipient Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecipientType__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OWNER</fullName>
                </value>
                <value>
                    <fullName>ATTENDEE</fullName>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__RecordIds__c</fullName>
        <label>Record Ids</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Relation__c</fullName>
        <label>Relation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                    <label>Success</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Styles__c</fullName>
        <label>Styles</label>
        <length>52000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sumoapp__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__TriggerTime__c</fullName>
        <label>Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
                <value>
                    <fullName>BOOKED</fullName>
                    <label>Booked</label>
                </value>
                <value>
                    <fullName>BOOKED_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>CANCELED_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>REMINDER</fullName>
                    <label>Reminder</label>
                </value>
                <value>
                    <fullName>REMINDER_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>SEND_PAYMENT_LINK</fullName>
                </value>
                <value>
                    <fullName>SEND_REGISTRATION_LINK</fullName>
                </value>
                <value>
                    <fullName>UPDATED</fullName>
                    <label>Updated</label>
                </value>
                <value>
                    <fullName>UPDATED_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>WAITLIST</fullName>
                </value>
                <value>
                    <fullName>WAITLIST_SF_ONLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SUMO Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>sumoapp__EmailAddress__c</columns>
        <columns>sumoapp__Status__c</columns>
        <columns>sumoapp__Type__c</columns>
        <columns>sumoapp__RecipientType__c</columns>
        <columns>sumoapp__HtmlBody__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>Sumo Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>